--- a/index.html
+++ b/index.html
@@ -1,189 +1,211 @@
 <!Doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8">
-  <title>Reservia - Trouvez votre hébergement</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://kit.fontawesome.com/fccb76fc09.js" crossorigin="anonymous"></script>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta charset="utf-8">
+	<title>Reservia - Trouvez votre hébergement</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/fccb76fc09.js" crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
-	<div id="bloc_page">
-		<header>
-			<div id="logo">
-					<img src="images/logo/Reservia@3x.png" alt="logo reservia"/>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="#section_1">Hébergement</a></li>
-					<li><a href="#section_2">Activités</a></li>
-				</ul>
-			</nav>
-			<a href="#"><span>S'inscrire</span></a>	
-		</header>
-		<div id="titre_principal">
-			<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
-			<p>En plein centre ville ou en pleine nature</p>
+<div id="bloc_page">
+	<header>
+		<div id="logo">
+			<img src="images/logo/Reservia@3x.png" alt="logo reservia"/>
 		</div>
-		<form method="post" action="traitement.php">
-				<div class="formulaire">
-					<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
-					<input id="recherche" type="text" name="Recherche" value="Marseille,France">
-					<button type="button" class="button1"><i class="fas fa-search"></i><span>Rechercher</span></button>
-				</div>
-		</form>
-
-		<div id="filtres">
-			<span>Filtres</span>
+		<nav>
 			<ul>
-				<li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
-				<li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
-				<li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
-				<li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
+				<li><a href="#section_1">Hébergement</a></li>
+				<li><a href="#section_2">Activités</a></li>
 			</ul>
+		</nav>
+		<a href="#"><span>S'inscrire</span></a>
+	</header>
+	<div id="titre_principal">
+		<h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+		<p>En plein centre ville ou en pleine nature</p>
+	</div>
+	<form method="post" action="traitement.php">
+		<div class="formulaire">
+			<label for="recherche"><i class="fas fa-map-marker-alt"></i></label>
+			<input id="recherche" type="text" name="Recherche" value="Marseille,France">
+			<button type="button" class="button1"><i class="fas fa-search"></i><span>Rechercher</span></button>
 		</div>
-		<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
-		<section id="section_1">
-			<div id="hebergement">
-				<h2>Hébgergement à Marseille</h2>
+	</form>
+
+	<div id="filtres">
+		<span>Filtres</span>
+		<ul>
+			<li><a href="#"><i class="fas fa-money-bill-wave"></i>Economique</a></li>
+			<li><a href="#"><i class="fas fa-child"></i>Familial</a></li>
+			<li><a href="#"><i class="fas fa-heart"></i>Romantique</a></li>
+			<li><a href="#"><i class="fas fa-dog"></i>Animaux autorisés</a></li>
+		</ul>
+	</div>
+	<p><i class="fas fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+	<section id="section_1">
+		<div id="hebergement">
+			<h2>Hébgergement à Marseille</h2>
+			<div class="list">
 				<a href="#">
-					<div class="premiere_img">
-						<div class="first">
-							<img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière"/>
-							<span>Auberge la Cannabière</span>
-							<p>Nuit à partir de 25€</p>
-							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-						</div>
-						<div class="first">
-							<img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
-							<span>Hôtel du port</span>
-							<p>Nuit à partir de 52€</p>
-							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-						</div>
-						<div class="first">
-							<img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
-							<span>Hôtel les mouettes</span>
-							<p>Nuit à partir de 76€</p>
-							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-						</div>
+					<div class="first">
+						<img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannabière"/>
+						<span>Auberge la Cannabière</span>
+						<p>Nuit à partir de 25€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
 					</div>
-					<div class="deuxieme_img">
-						<div class="first">
-							<img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
-							<span>Hôtel de la mer</span>
-							<p>Nuit à partir de 46€</p>
-							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
-						</div>
-						<div class="first">
-							<img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier"/>
-							<span>Auberge le panier</span>
-							<p>Nuit à partir de 23€</p>
-							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-						</div>
-						<div class="first">
-							<img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
-							<span>Hôtel chez Amina</span>
-							<p>Nuit à partir de 96€</p>
+				</a>
+				<a href="#">
+					<div class="first">
+						<img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
+						<span>Hôtel du port</span>
+						<p>Nuit à partir de 52€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
+				</a>
+				<a href="#">
+					<div class="first">
+						<img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
+						<span>Hôtel les mouettes</span>
+						<p>Nuit à partir de 76€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+				</a>
+
+				<a href="#">
+					<div class="first">
+						<img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
+						<span>Hôtel de la mer</span>
+						<p>Nuit à partir de 46€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+				</a>
+				<a href="#">
+					<div class="first">
+						<img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier"/>
+						<span>Auberge le panier</span>
+						<p>Nuit à partir de 23€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+					</div>
+				</a>
+				<a href="#">
+					<div class="first">
+						<img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
+						<span>Hôtel chez Amina</span>
+						<p>Nuit à partir de 96€</p>
+						<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+					</div>
+				</a>
+			</div>
+
+			<p><a href="#">Afficher plus</a></p>
+		</div>
+		<aside>
+			<div id="populaires">
+				<h2>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h2>
+				<a href="#">
+					<div class="second">
+						<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<div class="soleil">
+							<span>Hôtel le soleil du matin</span>
+							<p>Nuit à partir de 128€</p>
 							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
 						</div>
 					</div>
 				</a>
-				<p><a href="#">Afficher plus</a></p>
+				<a href="#">
+					<div class="second">
+						<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
+						<div class="soleil">
+							<span>Au coeur de l'eau<br />Chambres d'hôtes</span>
+							<p>Nuit à partir de 71€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+						</div>
+					</div>
+				</a>
+				<a href="#">
+					<div class="second">
+						<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
+						<div class="soleil">
+							<span>Hôtel tout bleu et blanc</span>
+							<p>Nuit à partir de 68€</p>
+							<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
+						</div>
+					</div>
+				</a>
 			</div>
-			<aside>
-				<div id="populaires">
-					<h2>Les plus populaires<a href="#"><i class="fas fa-chart-line"></i></a></h2>
-					<a href="#">
-						<div class="second">
-							<img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<div class="soleil">
-								<span>Hôtel le soleil du matin</span>
-								<p>Nuit à partir de 128€</p>
-								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-							</div>
-						</div>
-					</a>
-					<a href="#">
-						<div class="second">
-							<img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
-							<div class="soleil">
-								<span>Au coeur de l'eau<br />Chambres d'hôtes</span>
-								<p>Nuit à partir de 71€</p>
-								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-							</div>
-						</div>
-					</a>
-					<a href="#">
-						<div class="second">
-							<img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
-							<div class="soleil">
-								<span>Hôtel tout bleu et blanc</span>
-								<p>Nuit à partir de 68€</p>
-								<p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
-							</div>
-						</div>
-					</a>	
-				</div>
-			</aside>
-		</section>
-		<section id="section_2">
-			<h2>Activités à Marseille</h2>
-			<a href="#">
-				<div id="activites">
-					<div class="vertical">
-						<div class="titre_2">
-							<img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Vieux Port</span>
-						</div>
-					</div>
-					<div class="double">
-						<div class="titre_2">
-							<img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Fort de Pomègues</span>
-						</div>
-						<div class="titre_2">
-							<img src="images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Îles du Frioul</span>
-						</div>
-					</div>
+		</aside>
+	</section>
+	<section id="section_2">
+		<h2>Activités à Marseille</h2>
 
-					<div class="vertical">
-						<div class="titre_2">
-							<img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Parc National des Calanques</span>
-						</div>
+		<div id="activites">
+			<div class="vertical first">
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Vieux Port</span>
 					</div>
-					<div class="double">
-						<div class="titre_2">
-							<img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Nôtre-Dame-De-La-Garde</span>
-						</div>
-						<div class="titre_2">
-							<img src="images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin"/>
-							<span>Parc Longchamp</span>
-						</div>
+				</a>
+			</div>
+			<div class="double first">
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Fort de Pomègues</span>
 					</div>
-				</div>
-			</a>	
-		</section>
+				</a>
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Îles du Frioul</span>
+					</div>
+				</a>
+			</div>
+
+			<div class="vertical second">
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Parc National des Calanques</span>
+					</div>
+				</a>
+			</div>
+			<div class="double second">
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Nôtre-Dame-De-La-Garde</span>
+					</div>
+				</a>
+				<a href="#">
+					<div class="titre_2">
+						<img src="images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Hôtel le soleil du matin"/>
+						<span>Parc Longchamp</span>
+					</div>
+				</a>
+			</div>
+		</div>
+		</a>
+	</section>
 	<footer>
 		<div class="a_propos">
-	           <h2>A propos</h2>
-	           <p><a href="#">Fonctionnement du site !</a></p>
-	           <p><a href="#">Conditions générales de vente</a></p>
-	           <p><a href="#">Données et confidentialité</a></p>    
-	    		</div>
-	       <div class="a_propos">
-	           <h2>Nos hébergements</h2>
-	           <p><a href="#">Charte qualité</a></p>
-	           <p><a href="#">Soumettre votre hôtel</a></p>  
-	       </div>
-	       <div class="a_propos">
-	           <h2>Assistance</h2>
-	           <p><a href="#">Centre d'aide</a></p>
-	           <p><a href="#">Nous contacter</a></p>    
-	       </div>	    
+			<h2>A propos</h2>
+			<p><a href="#">Fonctionnement du site !</a></p>
+			<p><a href="#">Conditions générales de vente</a></p>
+			<p><a href="#">Données et confidentialité</a></p>
+		</div>
+		<div class="a_propos">
+			<h2>Nos hébergements</h2>
+			<p><a href="#">Charte qualité</a></p>
+			<p><a href="#">Soumettre votre hôtel</a></p>
+		</div>
+		<div class="a_propos">
+			<h2>Assistance</h2>
+			<p><a href="#">Centre d'aide</a></p>
+			<p><a href="#">Nous contacter</a></p>
+		</div>
 	</footer>
-	</div>
+</div>
 </body>
 </html>
